--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.3.0
   firebase_auth: ^6.0.1
   google_sign_in: ^7.1.1
+  cloud_firestore: ^6.0.0
 
 dev_dependencies:
   flutter_test:
